# SmartTree

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  pytest.ini
main/: settings.py  settings.py.orig  urls.py
script/: test
tree/: admin.py  models.py  urls.py  views.py
tree/migrations/: 0001_initial.py  0002_dynamicfield_static.py  0003_dynamicfield_position.py  0004_remove_dynamicfield_static_dynamicfield_changeable.py  0005_remove_phrase_requests_fill.py  0006_phrase_timer.py  0007_alter_phrase_timer_trigger.py
tree/src/: constants.py
tree/static/tree/: dialog.css  dialog.js
tree/templates/tree/: base.html  dialog_detail.html
tree/templatetags/: tree_templatetags.py
