[tool.poetry]
name = "smarttree"
version = "0.1.0"
description = ""
authors = ["kvarel <a.parshin@comearth.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
django-environ = "^0.9.0"
whitenoise = "^6.2.0"
django-debug-toolbar = "^3.7.0"
django-tinymce = "^3.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
